# PyTorch-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  model.py  net.cpp
Autograd/: CMakeLists.txt  autograd.cpp
CNN : MNIST/: CMakeLists.txt  CNNMNIST.cpp
CNN_MNIST/: README.md
Custom DataLoader/: CMakeLists.txt  Dataset.cpp  PrepDataset.cpp
CustomDataLoader/: main.cpp
CustomDataLoader/inc/: Dataset.h  prepDataset.h
Custom_DataLoader/: CMakeLists.txt  Dataset.cpp  PrepDataset.cpp  main.cpp
Custom_DataLoader/src/: Dataset.cpp  prepDataset.cpp
Dataset and DataLoader/: CMakeLists.txt  Dataloader.cpp  README.md
DogCat_Classifier/: CMakeLists.txt  main.cpp
DogCat_Classifier/inc/: model.h
DogCat_Classifier/src/: model.cpp  prepDataset.cpp
MobileNetV2/: CMakeLists.txt  DataLoader.py  MobileNetV2.py  QATDogCatMobileNetV2.pt  QATMobileNet.pt  QATMobileNetV2.ipynb  QuantMobileNet.ipynb  QuantResNet18.ipynb  README.md  StaticQuantization.ipynb  main.cpp  net.cpp
MobileNetV2/Inference/: CMakeLists.txt  main.cpp
MobileNetV2/inc/: Dataset.h  ImageFolderDataset.h  MobileNetV2.h  model.h
MobileNetV2/src/: Dataset.cpp  ImageFolderDataset.cpp  MobileNetV2.cpp  model.cpp
NeuralNet/: CMakeLists.txt
NeuralNet_XorNet/: XORNN.cpp
OpenCV/: README.md
OpenCV/test/: CMakeCache.txt  DisplayImage.cpp  Makefile  cmake_install.cmake
PreTrained_Loading/: CMakeLists.txt
PreTrained_Loading/models/: net.pt
WindowsSetup/: README.md
WindowsSetup/NeuralNetXorNet/: CMakeLists.txt  XORNN.cpp  neuralnet.cpp  temp.cpp
