cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
project(main)
set(CMAKE_PREFIX_PATH /home/ss/STUDY/PyTorch-CPP/libtorch)
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(main net.cpp)
target_link_libraries(main "${TORCH_LIBRARIES}")
set_property(TARGET main PROPERTY CXX_STANDARD 17)
